tests/expectations/compiler/bugs/unknown_variable_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown variable `caller`
    --> compiler-test:37:44
     |
  37 |         return (self.caller, finalize_init(caller));
     |                                            ^^^^^^
Error [ETYC0372088]: An async transition must call an async function.
    --> compiler-test:36:5
     |
  36 |     async transition init(b: bool) -> (address, Future) {
  37 |         return (self.caller, finalize_init(caller));
  38 |     }
     |     ^
     |
     = Example: `async transition foo() -> Future { let a: Future = bar(); return await_futures(a); }`
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:54:53
     |
  54 |         let owner_amount: u64 = Mapping::get_or_use(account, caller, 0u64);
     |                                                     ^^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:56:22
     |
  56 |         Mapping::set(account, caller, owner_amount + admin_token_amt);
     |                      ^^^^^^^
Warning [WTYC0372002]: The async function `finalize_init` is never called by an async transition.
    --> compiler-test:40:5
     |
  40 |     async function finalize_init(caller: address) {
  41 |         let gs: GlobalState = Mapping::get_or_use(global_state, true, GlobalState {
  42 |             next_token_id: 0field,
  43 |             admin: aleo1az8p9vlllyqwtj0c2g9svkd0e5v0p3zzdflwwrpa7kpe8xrfxgfqqpru7m,
  44 |         });
  45 |         assert_eq(gs.next_token_id, 0field);
  46 |         assert_eq(caller, gs.admin);
  47 |         Mapping::set(global_state, true, GlobalState {
  48 |             next_token_id: 1field,
  49 |             admin: gs.admin,
  50 |         });
  51 | 
  52 |         let test_supply: u64 = 15000000000000u64;
  53 |         let admin_token_amt: u64 = 60000000u64;
  54 |         let owner_amount: u64 = Mapping::get_or_use(account, caller, 0u64);
  55 |         assert(owner_amount == 0u64);
  56 |         Mapping::set(account, caller, owner_amount + admin_token_amt);
  57 | 
  58 |         Mapping::set(test_token, test_supply, TestToken {
  59 |             name: 4577111110111112111108121field,
  60 |             symbol: 4577111110111112111108121field,
  61 |             decimals: 6u8,
  62 |             circulating_supply: 0u64 + admin_token_amt,
  63 |             total_supply: test_supply,
  64 |             admin: gs.admin,
  65 |         });
  66 |     }
     |     ^"""]
